node compile against rococo v1

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -49,13 +49,16 @@ sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "roco
 sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-network = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
@@ -66,6 +69,7 @@ sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = 
 sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 structopt = "0.3.14"
