add cumulus pallets

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
 	"pallets/amendments",
 	"pallets/emergency-shutdown",
 	"pallets/grants",
+	"pallets/parachain-info",
 	"pallets/poa",
 	"pallets/reserve",
 	"pallets/root-of-trust",
