--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -7,6 +7,8 @@ version = "2.0.0"
 [features]
 default = ["std"]
 std = [
+  "cumulus-parachain-system/std",
+  "cumulus-runtime/std",
   "frame-executive/std",
   "frame-support/std",
   "frame-system/std",
@@ -43,6 +45,7 @@ std = [
   "pallet-transaction-payment/std",
   "pallet-transaction-payment-rpc-runtime-api/std",
   "pallet-utility/std",
+  "parachain-info/std",
   "parity-scale-codec/std",
   "safe-mix/std",
   "serde",
@@ -60,6 +63,10 @@ std = [
   "sp-std/std",
   "sp-transaction-pool/std",
   "sp-version/std",
+  "xcm/std",
+	"xcm-builder/std",
+	"xcm-executor/std",
+	"xcm-handler/std",
 ]
 runtime-benchmarks = [
   "frame-benchmarking",
@@ -91,6 +98,8 @@ runtime-benchmarks = [
 ]
 
 [dependencies]
+cumulus-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
+cumulus-runtime = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
 frame-executive = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
@@ -131,7 +140,9 @@ pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "
 pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+parachain-info = { default-features = false, path = "../pallets/parachain-info" }
 parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }
+polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }
 safe-mix = { version = "1.0.0", default-features = false }
 serde = { version = "1.0.116", optional = true, features = ["derive"] }
 sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
@@ -149,6 +160,10 @@ sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1"
 sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 sp-version = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 static_assertions = "1.1.0"
+xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }
+xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }
+xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }
+xcm-handler = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
 
 [build-dependencies]
 substrate-wasm-builder-runner = "1.0.6"
