get rid of unused code

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -16,22 +16,15 @@ std = [
   "frame-system-rpc-runtime-api/std",
   "pallet-allocations/std",
   "pallet-amendments/std",
-  "pallet-authority-discovery/std",
-  "pallet-authorship/std",
-  "pallet-babe/std",
   "pallet-balances/std",
   "pallet-collective/std",
   "pallet-emergency-shutdown/std",
-  "pallet-grandpa/std",
   "pallet-grants/std",
   "pallet-identity/std",
-  "pallet-im-online/std",
   "pallet-indices/std",
   "pallet-mandate/std",
   "pallet-membership/std",
   "pallet-multisig/std",
-  "pallet-offences/std",
-  "pallet-poa/std",
   "pallet-proxy/std",
   "pallet-randomness-collective-flip/std",
   "pallet-recovery/std",
@@ -39,7 +32,6 @@ std = [
   "pallet-root-of-trust/std",
   "pallet-root-of-trust-runtime-api/std",
   "pallet-scheduler/std",
-  "pallet-session/std",
   "pallet-tcr/std",
   "pallet-timestamp/std",
   "pallet-transaction-payment/std",
@@ -50,9 +42,6 @@ std = [
   "safe-mix/std",
   "serde",
   "sp-api/std",
-  "sp-application-crypto/std",
-  "sp-authority-discovery/std",
-  "sp-consensus-babe/std",
   "sp-block-builder/std",
   "sp-core/std",
   "sp-inherents/std",
@@ -75,22 +64,17 @@ runtime-benchmarks = [
   "frame-system-benchmarking",
   "pallet-allocations/runtime-benchmarks",
   "pallet-amendments/runtime-benchmarks",
-  "pallet-babe/runtime-benchmarks",
   "pallet-balances/runtime-benchmarks",
   "pallet-collective/runtime-benchmarks",
   "pallet-emergency-shutdown/runtime-benchmarks",
-  "pallet-grandpa/runtime-benchmarks",
   "pallet-grants/runtime-benchmarks",
   "pallet-identity/runtime-benchmarks",
   "pallet-indices/runtime-benchmarks",
-  "pallet-im-online/runtime-benchmarks",
   "pallet-multisig/runtime-benchmarks",
-  #"pallet-offences-benchmarking",
   "pallet-proxy/runtime-benchmarks",
   "pallet-reserve/runtime-benchmarks",
   "pallet-root-of-trust/runtime-benchmarks",
   "pallet-scheduler/runtime-benchmarks",
-  #"pallet-session-benchmarking",
   "pallet-tcr/runtime-benchmarks",
   "pallet-timestamp/runtime-benchmarks",
   "pallet-utility/runtime-benchmarks",
@@ -109,23 +93,15 @@ frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate"
 nodle-chain-primitives = { default-features = false, path = "../primitives" }
 pallet-allocations = { default-features = false, path = "../pallets/allocations" }
 pallet-amendments = { default-features = false, path = "../pallets/amendments" }
-pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-emergency-shutdown = { default-features = false, path = "../pallets/emergency-shutdown" }
-pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-grants = { default-features = false, path = "../pallets/grants" }
 pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-mandate = { git = "https://github.com/ETeissonniere/pallet-mandate", branch = "rococo-v1", default-features = false }
 pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-#pallet-offences-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
-pallet-poa = { default-features = false, path = "../pallets/poa" }
 pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-recovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
@@ -133,8 +109,6 @@ pallet-reserve = { default-features = false, path = "../pallets/reserve" }
 pallet-root-of-trust = { default-features = false, path = "../pallets/root-of-trust" }
 pallet-root-of-trust-runtime-api = { default-features = false, path = "../pallets/root-of-trust/rpc/runtime-api" }
 pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-pallet-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, features = ["historical"] }
-#pallet-session-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
 pallet-tcr = { default-features = false, path = "../pallets/tcr" }
 pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
@@ -146,9 +120,6 @@ polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-f
 safe-mix = { version = "1.0.0", default-features = false }
 serde = { version = "1.0.116", optional = true, features = ["derive"] }
 sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
@@ -166,4 +137,4 @@ xcm-executor = { git = "https://github.com/paritytech/polkadot", default-feature
 xcm-handler = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
 
 [build-dependencies]
-substrate-wasm-builder-runner = "1.0.6"
+substrate-wasm-builder = "3.0.0"
