--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -30,44 +30,47 @@ sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo
 sp-trie = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, features = ["memory-tracker"] }
 
 [dependencies]
+cumulus-collator = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-consensus = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-network = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-primitives = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-service = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 futures = { version = "0.3.1", features = ["compat"] }
 jsonrpc-core = "15.0.0"
 jsonrpc-pubsub = "15.0.0"
+log = "0.4.13"
 nodle-chain-executor = { path = "../executor" }
 nodle-chain-primitives = { path = "../primitives" }
 nodle-chain-runtime = { path = "../runtime" }
-pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-root-of-trust-rpc  = { path = "../pallets/root-of-trust/rpc" }
 pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }
+polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
+polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
+polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
+polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-network = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+serde = { version = "1.0.119", features = ["derive"] }
 sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
