--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -39,6 +39,7 @@ std = [
   "pallet-utility/std",
   "parachain-info/std",
   "parity-scale-codec/std",
+  "polkadot-parachain/std",
   "safe-mix/std",
   "serde",
   "sp-api/std",
