fix git actions rust toolchains setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
       run: brew install openssl cmake llvm
 
     - name: Setup toolchain
-      run: ./scripts/init.sh
+      run: rustup update nightly && rustup update stable && rustup target add wasm32-unknown-unknown --toolchain nightly
 
     - name: Run tests
       run: cargo test --all-targets --all-features --workspace
@@ -62,7 +62,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup toolchain
-      run: ./scripts/init.sh
+      run: rustup update nightly && rustup update stable && rustup target add wasm32-unknown-unknown --toolchain nightly
 
     - name: Install rustfmt
       run: rustup component add rustfmt
