--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -30,11 +30,11 @@ sc-service = { git = "https://github.com/paritytech/substrate", branch = "rococo
 sp-trie = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, features = ["memory-tracker"] }
 
 [dependencies]
-cumulus-collator = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-cumulus-consensus = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-cumulus-network = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-cumulus-primitives = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-cumulus-service = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-client-consensus = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 futures = { version = "0.3.1", features = ["compat"] }
