--- a/pallets/parachain-info/Cargo.toml
+++ b/pallets/parachain-info/Cargo.toml
@@ -8,14 +8,14 @@ edition = "2018"
 default = ["std"]
 std = [
   "codec/std",
-  "cumulus-primitives/std",
+  "cumulus-primitives-core/std",
   "frame-support/std",
   "frame-system/std",
   "serde",
 ]
 
 [dependencies]
-cumulus-primitives = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
+cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
 codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
 frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
