--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
 	"executor",
-	"node",
+	#"node",
 	"pallets/allocations",
 	"pallets/amendments",
 	"pallets/emergency-shutdown",
