--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -19,6 +19,9 @@ std = [
   "pallet-babe/std",
   "pallet-balances/std",
   "pallet-collective/std",
+  "pallet-contracts/std",
+  "pallet-contracts-primitives/std",
+  "pallet-contracts-rpc-runtime-api/std",
   "pallet-emergency-shutdown/std",
   "pallet-finality-tracker/std",
   "pallet-grandpa/std",
@@ -106,6 +109,9 @@ pallet-authorship = { version = "2.0.0", default-features = false }
 pallet-babe = { version = "2.0.0", default-features = false }
 pallet-balances = { version = "2.0.0", default-features = false }
 pallet-collective = { version = "2.0.0", default-features = false }
+pallet-contracts = { version = "2.0.0", default-features = false }
+pallet-contracts-primitives = { version = "2.0.0", default-features = false }
+pallet-contracts-rpc-runtime-api = { version = "0.8.0", default-features = false }
 pallet-emergency-shutdown = { version = "2.0.0", default-features = false, path = "../pallets/emergency-shutdown" }
 pallet-finality-tracker = { version = "2.0.0", default-features = false }
 pallet-grandpa = { version = "2.0.0", default-features = false }
