pallet-contract bringup rpc call works

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -71,6 +71,7 @@ sp-transaction-pool = "2.0.0"
 structopt = "0.3.14"
 substrate-frame-rpc-system = "2.0.0"
 pallet-contracts = "2.0.0"
+pallet-contracts-rpc = "0.8.0"
 
 [build-dependencies]
 vergen = "3.0.4"
