fix pallet contracts benchmarks

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -75,6 +75,7 @@ runtime-benchmarks = [
   "pallet-babe/runtime-benchmarks",
   "pallet-balances/runtime-benchmarks",
   "pallet-collective/runtime-benchmarks",
+  "pallet-contracts/runtime-benchmarks",
   "pallet-emergency-shutdown/runtime-benchmarks",
   "pallet-grandpa/runtime-benchmarks",
   "pallet-grants/runtime-benchmarks",
