fix rebased cargo.toml deps

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -107,6 +107,9 @@ pallet-authorship = { version = "3.0.0", default-features = false }
 pallet-babe = { version = "3.0.0", default-features = false }
 pallet-balances = { version = "3.0.0", default-features = false }
 pallet-collective = { version = "3.0.0", default-features = false }
+pallet-contracts = { version = "3.0.0", default-features = false }
+pallet-contracts-primitives = { version = "3.0.0", default-features = false }
+pallet-contracts-rpc-runtime-api = { version = "3.0.0", default-features = false }
 pallet-emergency-shutdown = { default-features = false, path = "../pallets/emergency-shutdown" }
 pallet-grandpa = { version = "3.0.0", default-features = false }
 pallet-grants = { default-features = false, path = "../pallets/grants" }
