--- a/pallets/poa/Cargo.toml
+++ b/pallets/poa/Cargo.toml
@@ -26,4 +26,5 @@ sp-std = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
 
 [dev-dependencies]
+serde = { version = "1.0.116", features = ["derive"] }
 sp-core = { version = "3.0.0", default-features = false }
