re add contracts pallets to node's cargo toml

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -38,6 +38,8 @@ jsonrpc-pubsub = "17.0.0"
 nodle-chain-executor = { path = "../executor" }
 nodle-chain-primitives = { path = "../primitives" }
 nodle-chain-runtime = { path = "../runtime" }
+pallet-contracts = "3.0.0"
+pallet-contracts-rpc = "3.0.0"
 pallet-im-online = { version = "3.0.0", default-features = false }
 pallet-root-of-trust-rpc  = { path = "../pallets/root-of-trust/rpc" }
 pallet-transaction-payment-rpc = "3.0.0"
