runtime to substrate 3.0

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -41,6 +41,7 @@ std = [
   "pallet-root-of-trust-runtime-api/std",
   "pallet-scheduler/std",
   "pallet-session/std",
+  "pallet-staking/std",
   "pallet-tcr/std",
   "pallet-timestamp/std",
   "pallet-transaction-payment/std",
@@ -60,6 +61,7 @@ std = [
   "sp-offchain/std",
   "sp-runtime/std",
   "sp-session/std",
+  "sp-staking/std",
   "sp-std/std",
   "sp-transaction-pool/std",
   "sp-version/std",
@@ -130,6 +132,7 @@ pallet-root-of-trust-runtime-api = { default-features = false, path = "../pallet
 pallet-scheduler = { version = "3.0.0", default-features = false }
 pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
 #pallet-session-benchmarking = { default-features = false, optional = true }
+pallet-staking = { version = "3.0.0", default-features = false }
 pallet-tcr = { default-features = false, path = "../pallets/tcr" }
 pallet-timestamp = { version = "3.0.0", default-features = false }
 pallet-transaction-payment = { version = "3.0.0", default-features = false }
@@ -149,10 +152,11 @@ sp-io = { version = "3.0.0", default-features = false }
 sp-offchain = { version = "3.0.0", default-features = false }
 sp-runtime = { version = "3.0.0", default-features = false }
 sp-session = { version = "3.0.0", default-features = false }
+sp-staking = { version = "3.0.0", default-features = false }
 sp-std = { version = "3.0.0", default-features = false }
 sp-transaction-pool = { version = "3.0.0", default-features = false }
 sp-version = { version = "3.0.0", default-features = false }
 static_assertions = "1.1.0"
 
 [build-dependencies]
-substrate-wasm-builder-runner = "3.0.0"
+substrate-wasm-builder = "3.0.0"
