--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -33,8 +33,7 @@ sp-trie = { version = "3.0.0", default-features = false, features = ["memory-tra
 frame-benchmarking = { version = "3.1.0", default-features = false }
 frame-benchmarking-cli = { version = "3.0.0", default-features = false }
 futures = { version = "0.3.13", features = ["compat"] }
-jsonrpc-core = "17.0.0"
-jsonrpc-pubsub = "17.0.0"
+jsonrpc-core = "15.1.0"
 nodle-chain-executor = { path = "../executor" }
 nodle-chain-primitives = { path = "../primitives" }
 nodle-chain-runtime = { path = "../runtime" }
@@ -51,13 +50,15 @@ sc-consensus = "0.9.0"
 sc-consensus-babe = "0.9.0"
 sc-consensus-babe-rpc = "0.9.0"
 sc-consensus-epochs = "0.9.0"
+sc-consensus-slots = "0.9.0"
 sc-finality-grandpa = "0.9.0"
 sc-finality-grandpa-rpc = "0.9.0"
-sc-keystore = "3.0.0"
+sc-finality-grandpa-warp-sync = "0.9.0"
 sc-network = "0.9.0"
 sc-rpc = "3.0.0"
 sc-rpc-api = "0.9.0"
 sc-service = "0.9.0"
+sc-telemetry = "3.0.0"
 sc-transaction-pool = "3.0.0"
 sp-api = "3.0.0"
 sp-authority-discovery = "3.0.0"
@@ -68,11 +69,12 @@ sp-consensus-babe = "0.9.0"
 sp-core = "3.0.0"
 sp-finality-grandpa = "3.0.0"
 sp-inherents = "3.0.0"
+sp-keystore = "0.9.0"
 sp-runtime = "3.0.0"
 sp-transaction-pool = "3.0.0"
 structopt = "0.3.21"
 substrate-frame-rpc-system = "3.0.0"
 
 [build-dependencies]
-vergen = "5.0.1"
+vergen = "3.0.4"
 substrate-build-script-utils = "3.0.0"
