--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -6,15 +6,19 @@ edition = "2018"
 
 [dependencies]
 frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-parity-scale-codec = { version = "1.3.6", default-features = false, features = ["derive"] }
+parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
+serde = { version = "1.0.116", optional = true, features = ["derive"] }
 sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 
 [features]
 default = ["std"]
 std = [
 	"frame-system/std",
     "parity-scale-codec/std",
+	"serde",
 	"sp-core/std",
 	"sp-runtime/std",
+	"sp-std/std"
 ]
