--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -9,6 +9,7 @@ default = ["std"]
 std = [
   "cumulus-pallet-parachain-system/std",
 	"cumulus-pallet-xcm-handler/std",
+  "cumulus-primitives-core/std",
   "frame-executive/std",
   "frame-support/std",
   "frame-system/std",
@@ -53,6 +54,12 @@ std = [
   "sp-std/std",
   "sp-transaction-pool/std",
   "sp-version/std",
+  "orml-currencies/std",
+  "orml-traits/std",
+  "orml-tokens/std",
+  "orml-unknown-tokens/std",
+  "orml-xcm-support/std",
+  "orml-xtokens/std",
   "xcm/std",
 	"xcm-builder/std",
 	"xcm-executor/std",
@@ -84,6 +91,7 @@ runtime-benchmarks = [
 [dependencies]
 cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
 cumulus-pallet-xcm-handler = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
+cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
 frame-executive = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
@@ -131,6 +139,12 @@ sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1"
 sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 sp-version = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 static_assertions = "1.1.0"
+orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "a62cf43ff7ba548600c2d2c36b1c662ff026e60a", default-features = false}
+orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "a62cf43ff7ba548600c2d2c36b1c662ff026e60a", default-features = false}
+orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "a62cf43ff7ba548600c2d2c36b1c662ff026e60a", default-features = false}
+orml-unknown-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "a62cf43ff7ba548600c2d2c36b1c662ff026e60a", default-features = false}
+orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "a62cf43ff7ba548600c2d2c36b1c662ff026e60a", default-features = false}
+orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "a62cf43ff7ba548600c2d2c36b1c662ff026e60a", default-features = false}
 xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }
 xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }
 xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "rococo-v1" }
