--- a/pallets/root-of-trust/Cargo.toml
+++ b/pallets/root-of-trust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-root-of-trust"
-version = "2.0.0"
+version = "2.0.1"
 authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
 edition = "2018"
 description = "This pallet implements a distributed Root Of Trust for Certification Authorities"
@@ -29,9 +29,9 @@ frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch =
 frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-pallet-tcr = { default-features = false, path = "../tcr" }
-parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
-serde = { version = "1.0.116", optional = true, features = ["derive"] }
+pallet-tcr = { version = "2.0.0", default-features = false, path = "../tcr" }
+parity-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
+serde = { version = "1.0.124", optional = true, features = ["derive"] }
 sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
