--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -17,6 +17,7 @@ runtime-benchmarks = [
 cli = [
 	"nodle-chain-executor/wasmi-errno",
 ]
+enable-contracts = []
 
 [package.metadata.wasm-pack.profile.release]
 # `wasm-opt` has some problems on linux, see
