--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -19,9 +19,9 @@ std = [
   "pallet-amendments/std",
   "pallet-balances/std",
   "pallet-collective/std",
-  "pallet-contracts/std",
-  "pallet-contracts-primitives/std",
-  "pallet-contracts-rpc-runtime-api/std",
+#   "pallet-contracts/std",
+#   "pallet-contracts-primitives/std",
+#   "pallet-contracts-rpc-runtime-api/std",
   "pallet-emergency-shutdown/std",
   "pallet-grants/std",
   "pallet-identity/std",
@@ -76,7 +76,7 @@ runtime-benchmarks = [
   "pallet-amendments/runtime-benchmarks",
   "pallet-balances/runtime-benchmarks",
   "pallet-collective/runtime-benchmarks",
-  "pallet-contracts/runtime-benchmarks",
+#   "pallet-contracts/runtime-benchmarks",
   "pallet-emergency-shutdown/runtime-benchmarks",
   "pallet-grants/runtime-benchmarks",
   "pallet-identity/runtime-benchmarks",
@@ -91,6 +91,7 @@ runtime-benchmarks = [
   "pallet-utility/runtime-benchmarks",
   "sp-runtime/runtime-benchmarks",
 ]
+enable-contracts = []
 
 [dependencies]
 cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1", default-features = false }
@@ -107,9 +108,9 @@ pallet-allocations = { default-features = false, path = "../pallets/allocations"
 pallet-amendments = { default-features = false, path = "../pallets/amendments" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
-pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+# pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+# pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
+# pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
 pallet-emergency-shutdown = { default-features = false, path = "../pallets/emergency-shutdown" }
 pallet-grants = { default-features = false, path = "../pallets/grants" }
 pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
