nodle-staking session manager integration
Signed-off-by: rajesh-nodle <rajesh@nodle.co>

--- a/pallets/nodle-staking/Cargo.toml
+++ b/pallets/nodle-staking/Cargo.toml
@@ -10,7 +10,6 @@ readme = "README.md"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-author-inherent = { path = "../author-inherent", default-features = false }
 frame-support = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
 pallet-balances = { version = "3.0.0", default-features = false }
@@ -18,6 +17,10 @@ parity-scale-codec = { version = "2.0.0", default-features = false, features = [
 serde = { version = "1.0.101", optional = true }
 sp-std = { version = "3.0.0", default-features = false }
 sp-runtime = { version = "3.0.0", default-features = false }
+sp-staking = { version = "3.0.0", default-features = false }
+log = { version = "0.4.14", default-features = false }
+pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
+pallet-authorship = { version = "3.0.0", default-features = false }
 
 [dev-dependencies]
 sp-io ={ version = "3.0.0" }
@@ -27,7 +30,6 @@ pallet-timestamp = { version = "3.0.0" }
 [features]
 default = ["std"]
 std = [
-	"author-inherent/std",
 	"frame-support/std",
 	"frame-system/std",
 	"pallet-balances/std",
@@ -35,4 +37,8 @@ std = [
 	"serde",
 	"sp-std/std",
 	"sp-runtime/std",
+	"sp-staking/std",
+	"log/std",
+	"pallet-authorship/std",
+	"pallet-session/std",
 ]
