nodle-staking basic use-case bringup
Signed-off-by: rajesh-nodle <rajesh@nodle.co>

--- a/pallets/nodle-staking/Cargo.toml
+++ b/pallets/nodle-staking/Cargo.toml
@@ -20,11 +20,14 @@ sp-runtime = { version = "3.0.0", default-features = false }
 sp-staking = { version = "3.0.0", default-features = false }
 pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
 pallet-authorship = { version = "3.0.0", default-features = false }
+log = { version = "0.4.14", default-features = false }
 
 [dev-dependencies]
 sp-io ={ version = "3.0.0" }
 sp-core = { version = "3.0.0" }
 pallet-timestamp = { version = "3.0.0" }
+sp-tracing = { version = "3.0.0" }
+substrate-test-utils = { version = "3.0.0" }
 
 [features]
 default = ["std"]
@@ -39,4 +42,5 @@ std = [
 	"sp-staking/std",
 	"pallet-authorship/std",
 	"pallet-session/std",
+	"log/std",
 ]
