Change in Unbounding logic | Use currency lock | benchmarking updates
Signed-off-by: rajesh-nodle <rajesh@nodle.co>

--- a/pallets/nodle-staking/Cargo.toml
+++ b/pallets/nodle-staking/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pallet-nodle-staking"
 version = "2.0.1"
-authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>, RajeshKumar <rajesh@nodle.co>']
+authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>, R.RajeshKumar <rajesh@nodle.co>']
 edition = "2018"
 description = "nodle's custome staking pallet, use a non inflationary reward system"
 readme = "README.md"
@@ -22,12 +22,18 @@ pallet-session = { version = "3.0.0", default-features = false, features = ["his
 pallet-authorship = { version = "3.0.0", default-features = false }
 log = { version = "0.4.14", default-features = false }
 
+# Optional imports for benchmarking
+frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
+rand_chacha = { version = "0.2", default-features = false, optional = true }
+
 [dev-dependencies]
 sp-io ={ version = "3.0.0" }
 sp-core = { version = "3.0.0" }
 pallet-timestamp = { version = "3.0.0" }
 sp-tracing = { version = "3.0.0" }
 substrate-test-utils = { version = "3.0.0" }
+frame-benchmarking = { version = "3.0.0" }
+rand_chacha = { version = "0.2" }
 
 [features]
 default = ["std"]
@@ -43,4 +49,10 @@ std = [
 	"pallet-authorship/std",
 	"pallet-session/std",
 	"log/std",
+]
+runtime-benchmarks = [
+	"frame-benchmarking",
+	"frame-system/runtime-benchmarks",
+	"frame-support/runtime-benchmarks",
+	"rand_chacha",
 ]
