Change in Unbounding logic | Use currency lock | benchmarking updates
Signed-off-by: rajesh-nodle <rajesh@nodle.co>

--- a/pallets/nodle-staking/Cargo.toml
+++ b/pallets/nodle-staking/Cargo.toml
@@ -21,19 +21,16 @@ sp-staking = { version = "3.0.0", default-features = false }
 pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
 pallet-authorship = { version = "3.0.0", default-features = false }
 log = { version = "0.4.14", default-features = false }
+sp-core = { version = "3.0.0", default-features = false }
+sp-io = { version = "3.0.0", default-features = false }
+sp-tracing = { version = "3.0.0", default-features = false }
+pallet-timestamp = { version = "3.0.0", default-features = false }
 
 # Optional imports for benchmarking
 frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
-rand_chacha = { version = "0.2", default-features = false, optional = true }
 
 [dev-dependencies]
-sp-io ={ version = "3.0.0" }
-sp-core = { version = "3.0.0" }
-pallet-timestamp = { version = "3.0.0" }
-sp-tracing = { version = "3.0.0" }
-substrate-test-utils = { version = "3.0.0" }
-frame-benchmarking = { version = "3.0.0" }
-rand_chacha = { version = "0.2" }
+substrate-test-utils = { version = "3.0.0", default-features = false }
 
 [features]
 default = ["std"]
@@ -48,11 +45,15 @@ std = [
 	"sp-staking/std",
 	"pallet-authorship/std",
 	"pallet-session/std",
+	"frame-benchmarking/std",
 	"log/std",
+	"sp-core/std",
+	"sp-io/std",
+	"sp-tracing/std",
+	"pallet-timestamp/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking",
 	"frame-system/runtime-benchmarks",
 	"frame-support/runtime-benchmarks",
-	"rand_chacha",
 ]
