--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -17,7 +17,9 @@ runtime-benchmarks = [
 cli = [
 	"nodle-chain-executor/wasmi-errno",
 ]
-with-staking = []
+with-staking = [
+	"pallet-nodle-staking",
+]
 
 [package.metadata.wasm-pack.profile.release]
 # `wasm-opt` has some problems on linux, see
@@ -42,6 +44,7 @@ pallet-contracts = "3.0.0"
 pallet-contracts-rpc = "3.0.0"
 pallet-im-online = { version = "3.0.0", default-features = false }
 pallet-root-of-trust-rpc  = { path = "../pallets/root-of-trust/rpc" }
+pallet-nodle-staking = { default-features = false, path = "../pallets/nodle-staking", optional = true }
 pallet-transaction-payment-rpc = "3.0.0"
 sc-authority-discovery = "0.9.0"
 sc-basic-authorship = "0.9.0"
