--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -18,7 +18,7 @@ cli = [
 	"nodle-chain-executor/wasmi-errno",
 ]
 with-staking = [
-	"pallet-nodle-staking",
+	"nodle-chain-runtime/with-staking",
 ]
 
 [package.metadata.wasm-pack.profile.release]
