runtime migration updates
Signed-off-by: rajesh-nodle <rajesh@nodle.co>

--- a/pallets/nodle-staking/Cargo.toml
+++ b/pallets/nodle-staking/Cargo.toml
@@ -24,6 +24,7 @@ log = { version = "0.4.14", default-features = false }
 
 # Optional imports for benchmarking
 frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
+pallet-poa = { default-features = false, path = "../poa", optional = true }
 
 [dev-dependencies]
 sp-core = { version = "3.0.0", default-features = false }
@@ -45,6 +46,7 @@ std = [
 	"sp-staking/std",
 	"pallet-authorship/std",
 	"pallet-session/std",
+	"pallet-poa/std",
 	"frame-benchmarking/std",
 	"log/std",
 ]
@@ -52,4 +54,7 @@ runtime-benchmarks = [
 	"frame-benchmarking",
 	"frame-system/runtime-benchmarks",
 	"frame-support/runtime-benchmarks",
+]
+test-migration = [
+	"pallet-poa",
 ]
