review comments fix
Signed-off-by: rajesh-nodle <rajesh@nodle.co>

--- a/pallets/nodle-staking/Cargo.toml
+++ b/pallets/nodle-staking/Cargo.toml
@@ -24,7 +24,6 @@ log = { version = "0.4.14", default-features = false }
 
 # Optional imports for benchmarking
 frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
-pallet-poa = { default-features = false, path = "../poa", optional = true }
 
 [dev-dependencies]
 sp-core = { version = "3.0.0", default-features = false }
@@ -32,6 +31,7 @@ sp-io = { version = "3.0.0", default-features = false }
 sp-tracing = { version = "3.0.0", default-features = false }
 pallet-timestamp = { version = "3.0.0", default-features = false }
 substrate-test-utils = { version = "3.0.0", default-features = false }
+pallet-poa = { default-features = false, path = "../poa" }
 
 [features]
 default = ["std"]
@@ -46,7 +46,6 @@ std = [
 	"sp-staking/std",
 	"pallet-authorship/std",
 	"pallet-session/std",
-	"pallet-poa/std",
 	"frame-benchmarking/std",
 	"log/std",
 ]
@@ -56,5 +55,4 @@ runtime-benchmarks = [
 	"frame-support/runtime-benchmarks",
 ]
 test-migration = [
-	"pallet-poa",
 ]
