migration to substrate branch polkadot-v0.9.3 updates
Signed-off-by: rajesh-nodle <rajesh@nodle.co>

--- a/executor/Cargo.toml
+++ b/executor/Cargo.toml
@@ -6,15 +6,17 @@ edition = "2018"
 
 [dependencies]
 parity-scale-codec = "2.0.1"
+
+sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+
 nodle-chain-primitives = { path = "../primitives" }
 nodle-chain-runtime = { path = "../runtime" }
-sc-executor = "0.9.0"
-sp-core = "3.0.0"
-sp-io = "3.0.0"
-sp-state-machine = "0.9.0"
-sp-trie = "3.0.0"
-trie-root = "0.16.0"
-frame-benchmarking = "3.1.0"
+
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.3" }
 
 [features]
 wasmtime = [
