--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -5,11 +5,13 @@ authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2018"
 
 [dependencies]
-frame-system = { version = "3.0.0", default-features = false }
-parity-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
-sp-application-crypto = { version = "3.0.0", default-features = false }
-sp-core = { version = "3.0.0", default-features = false }
-sp-runtime = { version = "3.0.0", default-features = false }
+parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
+
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
+frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
 
 [features]
 default = ["std"]
