--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -26,58 +26,67 @@ wasm-opt = false
 
 [target.'cfg(target_arch="x86_64")'.dependencies]
 nodle-chain-executor = { path = "../executor", features = [ "wasmtime" ] }
-sc-cli = { version = "0.9.0", features = [ "wasmtime" ] }
-sc-service = { version = "0.9.0", default-features = false, features = [ "wasmtime" ] }
-sp-trie = { version = "3.0.0", default-features = false, features = ["memory-tracker"] }
+sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.3" }
+sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.3" }
+sp-trie = { git = "https://github.com/paritytech/substrate", features = ["memory-tracker"], branch = "polkadot-v0.9.3" }
 
 [dependencies]
-frame-benchmarking = { version = "3.1.0", default-features = false }
-frame-benchmarking-cli = { version = "3.0.0", default-features = false }
 futures = { version = "0.3.13", features = ["compat"] }
 jsonrpc-core = "15.1.0"
+structopt = "0.3.21"
+serde_json = "1.0.64"
+
+sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+
+substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+
 nodle-chain-executor = { path = "../executor" }
 nodle-chain-primitives = { path = "../primitives" }
 nodle-chain-runtime = { path = "../runtime" }
-pallet-contracts = "3.0.0"
-pallet-contracts-rpc = "3.0.0"
-pallet-im-online = { version = "3.0.0", default-features = false }
 pallet-root-of-trust-rpc  = { path = "../pallets/root-of-trust/rpc" }
-pallet-transaction-payment-rpc = "3.0.0"
-sc-authority-discovery = "0.9.0"
-sc-basic-authorship = "0.9.0"
-sc-cli = "0.9.0"
-sc-client-api = "3.0.0"
-sc-consensus = "0.9.0"
-sc-consensus-babe = "0.9.0"
-sc-consensus-babe-rpc = "0.9.0"
-sc-consensus-epochs = "0.9.0"
-sc-consensus-slots = "0.9.0"
-sc-finality-grandpa = "0.9.0"
-sc-finality-grandpa-rpc = "0.9.0"
-sc-finality-grandpa-warp-sync = "0.9.0"
-sc-network = "0.9.0"
-sc-rpc = "3.0.0"
-sc-rpc-api = "0.9.0"
-sc-service = "0.9.0"
-sc-telemetry = "3.0.0"
-sc-transaction-pool = "3.0.0"
-sp-api = "3.0.0"
-sp-authority-discovery = "3.0.0"
-serde_json = "1.0.64"
-sp-blockchain = "3.0.0"
-sp-block-builder = "3.0.0"
-sp-chain-spec = "3.0.0"
-sp-consensus = "0.9.0"
-sp-consensus-babe = "0.9.0"
-sp-core = "3.0.0"
-sp-finality-grandpa = "3.0.0"
-sp-inherents = "3.0.0"
-sp-keystore = "0.9.0"
-sp-runtime = "3.0.0"
-sp-transaction-pool = "3.0.0"
-structopt = "0.3.21"
-substrate-frame-rpc-system = "3.0.0"
+
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
+frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
 
 [build-dependencies]
 vergen = "3.0.4"
-substrate-build-script-utils = "3.0.0"
+substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.3" }
