--- a/pallets/allocations/Cargo.toml
+++ b/pallets/allocations/Cargo.toml
@@ -13,7 +13,7 @@ std = [
   "pallet-balances/std",
   "pallet-emergency-shutdown/std",
   "parity-scale-codec/std",
-  "serde",
+  "serde/std",
   "sp-io/std",
   "sp-runtime/std",
   "sp-std/std",
@@ -25,18 +25,22 @@ runtime-benchmarks = [
 ]
 
 [dependencies]
-frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }
-frame-support = { version = "3.0.0", default-features = false }
-frame-system = { version = "3.0.0", default-features = false }
-nodle-support = { path = "../../support" }
-pallet-balances = { version = "3.0.0", default-features = false }
-pallet-emergency-shutdown = { default-features = false, path = "../emergency-shutdown" }
-parity-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
-serde = { version = "1.0.116", optional = true, features = ["derive"] }
-sp-io = { version = "3.0.0", default-features = false }
-sp-runtime = { version = "3.0.0", default-features = false }
-sp-std = { version = "3.0.0", default-features = false }
+parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
+serde = { version = "1.0.123", default-features = false }
 
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
+pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
+nodle-support = { path = "../../support" }
+pallet-emergency-shutdown = { default-features = false, path = "../emergency-shutdown" }
+
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.3" }
 
 [dev-dependencies]
-sp-core = { version = "3.0.0", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
