--- a/pallets/poa/Cargo.toml
+++ b/pallets/poa/Cargo.toml
@@ -11,20 +11,24 @@ std = [
   "frame-system/std",
   "pallet-session/std",
   "parity-scale-codec/std",
+  "serde/std",
   "sp-io/std",
   "sp-runtime/std",
   "sp-std/std",
 ]
 
 [dependencies]
-frame-support = { version = "3.0.0", default-features = false }
-parity-scale-codec = { version = "2.0.1", features = ["derive"], default-features = false }
-pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
-sp-io = { version = "3.0.0", default-features = false }
-sp-runtime = { version = "3.0.0", default-features = false }
-sp-std = { version = "3.0.0", default-features = false }
-frame-system = { version = "3.0.0", default-features = false }
+parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
+serde = { version = "1.0.123", default-features = false }
+
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
+pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , features = ["historical"], branch = "polkadot-v0.9.3" }
+
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
 
 [dev-dependencies]
-serde = { version = "1.0.116", features = ["derive"] }
-sp-core = { version = "3.0.0", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
