--- a/pallets/reserve/Cargo.toml
+++ b/pallets/reserve/Cargo.toml
@@ -11,29 +11,33 @@ std = [
   "frame-system/std",
   "pallet-balances/std",
   "parity-scale-codec/std",
-  "serde",
+  "serde/std",
   "sp-io/std",
   "sp-runtime/std",
   "sp-std/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking",
-  "frame-system/runtime-benchmarks",
+	"frame-system/runtime-benchmarks",
 	"frame-support/runtime-benchmarks",
 ]
 
 [dependencies]
-frame-benchmarking = { version = "3.1.0", default-features = false, optional = true }
-frame-support = { version = "3.0.0", default-features = false }
-frame-system = { version = "3.0.0", default-features = false }
-nodle-support = { path = "../../support" }
-pallet-balances = { version = "3.0.0", default-features = false }
-parity-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
-serde = { version = "1.0.124", optional = true, features = ["derive"] }
-sp-io = { version = "3.0.0", default-features = false }
-sp-runtime = { version = "3.0.0", default-features = false }
-sp-std = { version = "3.0.0", default-features = false }
+parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
+serde = { version = "1.0.123", default-features = false }
 
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
+pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
+nodle-support = { path = "../../support" }
+
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.3" }
 
 [dev-dependencies]
-sp-core = { version = "3.0.0", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
