--- a/pallets/root-of-trust/rpc/Cargo.toml
+++ b/pallets/root-of-trust/rpc/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2018"
 jsonrpc-core = "15.0.1"
 jsonrpc-core-client = "15.0.1"
 jsonrpc-derive = "15.0.1"
+
+parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
+
+sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
 pallet-root-of-trust-runtime-api = { version = "2.0.0", path = "./runtime-api" }
-parity-scale-codec = { version = "2.0.1", default_features = false }
-sp-api = { version = "3.0.0", default_features = false }
-sp-blockchain = { version = "3.0.0", default_features = false }
-sp-runtime = { version = "3.0.0", default_features = false }
