--- a/pallets/root-of-trust/rpc/runtime-api/Cargo.toml
+++ b/pallets/root-of-trust/rpc/runtime-api/Cargo.toml
@@ -12,5 +12,5 @@ std = [
 ]
 
 [dependencies]
-parity-scale-codec = { version = "2.0.1", default_features = false }
-sp-api = { version = "3.0.0", default_features = false }
+parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
+sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
