--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -7,6 +7,7 @@ version = "2.0.7"
 [features]
 default = ["std"]
 std = [
+  "log/std",
   "frame-executive/std",
   "frame-support/std",
   "frame-system/std",
@@ -28,7 +29,7 @@ std = [
   "pallet-identity/std",
   "pallet-im-online/std",
   "pallet-indices/std",
-  "pallet-mandate/std",
+#   "pallet-mandate/std",
   "pallet-membership/std",
   "pallet-multisig/std",
   "pallet-offences/std",
@@ -50,7 +51,7 @@ std = [
   "parity-scale-codec/std",
   "pallet-curveless-staking/std",
   "safe-mix/std",
-  "serde",
+  "serde/std",
   "sp-api/std",
   "sp-application-crypto/std",
   "sp-authority-discovery/std",
@@ -100,69 +101,76 @@ with-staking = [
 ]
 
 [dependencies]
-frame-benchmarking = { version = "3.1.0", default-features = false, optional = true }
-frame-executive = { version = "3.0.0", default-features = false }
-frame-support = { version = "3.0.0", default-features = false }
-frame-system = { version = "3.0.0", default-features = false }
-frame-system-benchmarking = { version = "3.0.0", default-features = false, optional = true }
-frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }
+static_assertions = "1.1.0"
+log = { version = "0.4.14", default-features = false }
+
+parity-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
+serde = { version = "1.0.124", optional = true, features = ["derive"] }
+
+safe-mix = { version = "1.0.1", default-features = false }
+
+sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-consensus-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
+pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-contracts = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-identity = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-im-online = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-indices = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-membership = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-recovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
+pallet-emergency-shutdown = { default-features = false, path = "../pallets/emergency-shutdown" }
 nodle-chain-primitives = { default-features = false, path = "../primitives" }
 pallet-allocations = { default-features = false, path = "../pallets/allocations" }
 pallet-amendments = { default-features = false, path = "../pallets/amendments" }
-pallet-authority-discovery = { version = "3.0.0", default-features = false }
-pallet-authorship = { version = "3.0.0", default-features = false }
-pallet-babe = { version = "3.0.0", default-features = false }
-pallet-balances = { version = "3.0.0", default-features = false }
-pallet-collective = { version = "3.0.0", default-features = false }
-pallet-contracts = { version = "3.0.0", default-features = false }
-pallet-contracts-primitives = { version = "3.0.0", default-features = false }
-pallet-contracts-rpc-runtime-api = { version = "3.0.0", default-features = false }
-pallet-emergency-shutdown = { default-features = false, path = "../pallets/emergency-shutdown" }
-pallet-grandpa = { version = "3.0.0", default-features = false }
-pallet-grants = { default-features = false, path = "../pallets/grants" }
-pallet-identity = { version = "3.0.0", default-features = false }
-pallet-im-online = { version = "3.0.0", default-features = false }
-pallet-indices = { version = "3.0.0", default-features = false }
-pallet-mandate = { version = "2.0.8", default-features = false }
-pallet-membership = { version = "3.0.0", default-features = false }
-pallet-multisig = { version = "3.0.0", default-features = false }
-pallet-offences = { version = "3.0.0", default-features = false }
-pallet-poa = { default-features = false, path = "../pallets/poa" }
-pallet-curveless-staking = { default-features = false, path = "../pallets/pallet-curveless-staking", optional = true }
-pallet-proxy = { version = "3.0.0", default-features = false }
-pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
-pallet-recovery = { version = "3.0.0", default-features = false }
 pallet-reserve = { default-features = false, path = "../pallets/reserve" }
 pallet-root-of-trust = { default-features = false, path = "../pallets/root-of-trust" }
 pallet-root-of-trust-runtime-api = { default-features = false, path = "../pallets/root-of-trust/rpc/runtime-api" }
-pallet-scheduler = { version = "3.0.0", default-features = false }
-pallet-session = { version = "3.0.0", default-features = false, features = ["historical"] }
-#pallet-session-benchmarking = { default-features = false, optional = true }
-pallet-staking = { version = "3.0.0", default-features = false }
 pallet-tcr = { default-features = false, path = "../pallets/tcr" }
-pallet-timestamp = { version = "3.0.0", default-features = false }
-pallet-transaction-payment = { version = "3.0.0", default-features = false }
-pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }
-pallet-utility = { version = "3.0.0", default-features = false }
-parity-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
-safe-mix = { version = "1.0.1", default-features = false }
-serde = { version = "1.0.124", optional = true, features = ["derive"] }
-sp-api = { version = "3.0.0", default-features = false }
-sp-application-crypto = { version = "3.0.0", default-features = false }
-sp-authority-discovery = { version = "3.0.0", default-features = false }
-sp-consensus-babe = { version = "0.9.0", default-features = false }
-sp-block-builder = { version = "3.0.0", default-features = false }
-sp-core = { version = "3.0.0", default-features = false }
-sp-inherents = { version = "3.0.0", default-features = false }
-sp-io = { version = "3.0.0", default-features = false }
-sp-offchain = { version = "3.0.0", default-features = false }
-sp-runtime = { version = "3.0.0", default-features = false }
-sp-session = { version = "3.0.0", default-features = false }
-sp-staking = { version = "3.0.0", default-features = false }
-sp-std = { version = "3.0.0", default-features = false }
-sp-transaction-pool = { version = "3.0.0", default-features = false }
-sp-version = { version = "3.0.0", default-features = false }
-static_assertions = "1.1.0"
+pallet-poa = { default-features = false, path = "../pallets/poa" }
+pallet-curveless-staking = { default-features = false, path = "../pallets/pallet-curveless-staking", optional = true }
+pallet-grants = { default-features = false, path = "../pallets/grants" }
+# pallet-mandate = { version = "2.0.8", default-features = false }
+
+frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.3" }
+
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.3" }
+frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.3" }
 
 [build-dependencies]
 substrate-wasm-builder = "3.0.0"
